--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,12 +22,18 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest-sugar
+          pip install pytest-html
           pip install playwright
           playwright install
       - name: Run tests
         run: |
           if [ -z "${{ github.event.inputs.test_class }}" ]; then
-            pytest --maxfail=1 --disable-warnings -q
+            pytest --maxfail=1 --disable-warnings -q --html=report.html --self-contained-html
           else
-            pytest ${{ github.event.inputs.test_class }} --maxfail=1 --disable-warnings -q
+            pytest ${{ github.event.inputs.test_class }} --maxfail=1 --disable-warnings -q --html=report.html --self-contained-html
           fi
+      - name: Upload test report
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: report.html
