--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,9 +27,12 @@ jobs:
 
       - name: Install Allure CLI
         run: |
-          wget -q https://github.com/allure-framework/allure2/releases/latest/download/allure-2.21.0.zip -O allure.zip
+          wget -q https://github.com/allure-framework/allure2/releases/download/2.21.0/allure-2.21.0.zip -O allure.zip
+          ls -l allure.zip
+          file allure.zip
+          head -20 allure.zip
           unzip allure.zip -d allure
-          sudo ln -s $PWD/allure/bin/allure /usr/bin/allu
+          sudo ln -s $PWD/allure/bin/allure /usr/bin/allure
 
       - name: Run tests and generate Allure report
         run: ./your-test-script.sh
