--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,7 +35,7 @@ jobs:
           sudo ln -s $PWD/allure/bin/allure /usr/bin/allure
 
       - name: Run tests and generate Allure report
-        run: ./your-test-script.sh
+        run: ./run.sh
 
       - name: Upload Allure Report
         uses: actions/upload-artifact@v4
