--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,6 +36,8 @@ jobs:
 
       - name: Run tests and generate Allure report
         run: bash ./run.sh
+        env:
+          ALLURE: 1
 
       - name: Upload Allure Report
         uses: actions/upload-artifact@v4
