--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,11 @@ jobs:
           echo "Recursive listing of allure-report:"
           find allure-report
 
+      - name: Archive Allure Report
+        run: |
+          echo "Zipping Allure report directory for artifact upload"
+          zip -r allure-report.zip allure-report
+
       - name: Upload Allure Report
         uses: actions/upload-artifact@v4
         with:
